Fix: Allow profile page to scroll on mobile
Fixes scrolling issues on the profile page on mobile by enabling overflow scrolling and removing a min-height restriction.

--- a/frontend/srcs/pages/iPongProfile/iPongUserProfile/iPongUserProfile.css
+++ b/frontend/srcs/pages/iPongProfile/iPongUserProfile/iPongUserProfile.css
@@ -6,6 +6,9 @@
 .UserProfile-frame {
   width: 100%;
   height: 100%;
+  overflow: hidden !important;
+  overflow-y: auto !important;
+
   background-color: rgba(0, 0, 0, 0.88);
 }
 
@@ -46,8 +49,14 @@
   margin-left: 100px;
 }
 
+.Tabs-frame {
+
+
+}
 .users-tabs {
   padding-left: 10px;
+
+
 }
 
 .User-details-and-menu {
@@ -321,3 +330,5 @@
 .arch-items {
   position: absolute;
 }
+
+
